--- a/안드로이드/lifecycle/생명주기.md
+++ b/안드로이드/lifecycle/생명주기.md
@@ -1,13 +1,10 @@
 # 생명주기
 
-상태: 진행 중
-작성일시: 2022년 6월 23일 오후 2:51
-
 ### Activity 의 생명주기(LifeCycle)
 
 생명주기는 액티비티가 시작하고 끝날 때까지의 과정으로 상태변화에 따라 콜백 메서드를 통합하여 명칭합니다. 이에 따라 메서드를 통해 생태 변화를 인지할 수 있고 이에 따른 대응과 문제 발생 시점 파악이 가능합니다.
 
-![Untitled](%E1%84%89%E1%85%A2%E1%86%BC%E1%84%86%E1%85%A7%E1%86%BC%E1%84%8C%E1%85%AE%E1%84%80%E1%85%B5%206f8d8b6db7c84701ba85f1d176968bf1/Untitled.png)
+![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/e9b7fd98-d4d3-4609-9fab-bdf48d20a201/a1d199c1-c131-4918-bc1f-1885e4c172f2/Untitled.png)
 
 - **onCreate()**
 
@@ -45,7 +42,7 @@ onRestart()는 다른 Activity에서 또는 홈에서 다시 돌아오는 경우
 
 ### Fragment의 생명주기
 
-![Untitled](%E1%84%89%E1%85%A2%E1%86%BC%E1%84%86%E1%85%A7%E1%86%BC%E1%84%8C%E1%85%AE%E1%84%80%E1%85%B5%206f8d8b6db7c84701ba85f1d176968bf1/Untitled%201.png)
+![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/3b6e50d8-5a5f-4b83-ae7c-2e007ff234ee/Untitled.png)
 
 ### 1. onAttach()
 
